[公司形象網站] => nav 調整  => 滑鼠 scroll 藍色底線位移 =>  到 A 區塊的 0.8 高度, 會 A切B nav item

--- a/01-Excellence-Web/index.html
+++ b/01-Excellence-Web/index.html
@@ -19,25 +19,25 @@
     <nav>
         <div class="text-bounce-bottom-container">
             <div class="nav-centent">
-                <a href="#" onclick="showNavItemAnimate(1)" class="logo">
+                <a href="#" onclick="clickNavItem(1)" class="logo">
                     <img src="images/logo/logo-shadow.png">
                 </a>
                 <div class="item-list">
-                    <a class="item" onclick="showNavItemAnimate(1)" href="#price-work-flow">
+                    <a class="item" onclick="clickNavItem(1)" href="#price-work-flow">
                         <img src="./images/icon/icon_handshake.svg">
                         <label>合作流程</label>
                     </a>
-                    <a class="item" onclick="showNavItemAnimate(2)" href="#service-list">
+                    <a class="item" onclick="clickNavItem(2)" href="#service-list">
                         <img src="./images/icon/icon_menu.svg">
                         <label>服務項目</label>
                     </a>
-                    <a class="item" onclick="showNavItemAnimate(3)" href="#portfolio-block">
+                    <a class="item" onclick="clickNavItem(3)" href="#portfolio-block">
                         &nbsp;
                         <img src="./images/icon/icon_2_img.svg">
                         <label>作品集</label>
                         &nbsp;
                     </a>
-                    <a class="item" onclick="showNavItemAnimate(4)" href="#footer">
+                    <a class="item" onclick="clickNavItem(4)" href="#footer">
                         <img src="./images/icon/icon_phone.svg">
                         <label>聯絡我們</label>
                     </a>
