[公司形象網站] => nav 調整 => 對準 item 中央 => 重新調整 html 結構

--- a/01-Excellence-Web/index.html
+++ b/01-Excellence-Web/index.html
@@ -17,39 +17,39 @@
 
     <!-- 上方導覽列 start -->
     <nav>
-        <div class="text-bounce-bottom-container">
             <div class="nav-centent">
                 <a href="#" onclick="clickNavItem(1)" class="logo">
                     <img src="images/logo/logo-shadow.png">
                 </a>
-                <div class="item-list">
-                    <a class="item" onclick="clickNavItem(1)" href="#price-work-flow">
-                        <img src="./images/icon/icon_handshake.svg">
-                        <label>合作流程</label>
-                    </a>
-                    <a class="item" onclick="clickNavItem(2)" href="#service-list">
-                        <img src="./images/icon/icon_menu.svg">
-                        <label>服務項目</label>
-                    </a>
-                    <a class="item" onclick="clickNavItem(3)" href="#portfolio-block">
-                        &nbsp;
-                        <img src="./images/icon/icon_2_img.svg">
-                        <label>作品集</label>
-                        &nbsp;
-                    </a>
-                    <a class="item" onclick="clickNavItem(4)" href="#footer">
-                        <img src="./images/icon/icon_phone.svg">
-                        <label>聯絡我們</label>
-                    </a>
-                    <i class="item fa fa-close" id="nav-close" style="margin-left: 10px;"></i>
+                <div class="text-bounce-bottom-container">
+                    <div class="item-list">
+                        <a class="item" onclick="clickNavItem(1)" href="#price-work-flow">
+                            <img src="./images/icon/icon_handshake.svg">
+                            <label>合作流程</label>
+                        </a>
+                        <a class="item" onclick="clickNavItem(2)" href="#service-list">
+                            <img src="./images/icon/icon_menu.svg">
+                            <label>服務項目</label>
+                        </a>
+                        <a class="item" onclick="clickNavItem(3)" href="#portfolio-block">
+                            &nbsp;
+                            <img src="./images/icon/icon_2_img.svg">
+                            <label>作品集</label>
+                            &nbsp;
+                        </a>
+                        <a class="item" onclick="clickNavItem(4)" href="#footer">
+                            <img src="./images/icon/icon_phone.svg">
+                            <label>聯絡我們</label>
+                        </a>
+                    </div>
+                    <!-- 藍色彈性底線 -->
+                    <div class="text-bounce-bottom-box">
+                        <div class="text-bounce-bottom"></div>
+                    </div>
                 </div>
+                <i class="fa fa-close" id="nav-close" style="margin-right: 10px;"></i>
                 <i class="fa fa-bars" id="nav-show"></i>
             </div>
-            <!-- 藍色彈性底線 -->
-            <div class="text-bounce-bottom-box">
-                <div class="text-bounce-bottom"></div>
-            </div>
-        </div>
     </nav>
     <!-- 上方導覽列 end -->
 
