[公司形象網站] => 報價流程輪播 => 網頁版換圖 svg => 置換 svg 變色

--- a/01-Excellence-Web/index.html
+++ b/01-Excellence-Web/index.html
@@ -91,13 +91,25 @@
         <div class="price-work-flow-slide">
             <div class="flow-tab-list-container">
                 <div class="flow-tab-list">
-                    <label id="flowTab1" onclick="moveFlowSlide(1)" class="fas fa-search" style="color:#F1B41B"></label>
+                    <div class="flow-tab" onclick="moveFlowSlide(1)">
+                        <img id="svgImg1" src="./images/flow-slide/flowIcon1.svg"></img>
+                        <img id="svgImg1click" src="./images/flow-slide/flowIcon1click.svg"></img>                        
+                    </div>
                     <div class="fa fa-arrow-right" aria-hidden="true"></div>
-                    <label id="flowTab2" onclick="moveFlowSlide(2)" class="fas fa-file-code"></label>
+                    <div class="flow-tab" onclick="moveFlowSlide(2)">
+                        <img id="svgImg2" src="./images/flow-slide/flowIcon2.svg"></img>
+                        <img id="svgImg2click" src="./images/flow-slide/flowIcon2click.svg"></img>   
+                    </div>
                     <div class="fa fa-arrow-right" aria-hidden="true"></div>
-                    <label id="flowTab3" onclick="moveFlowSlide(3)" class="fas fa-check-square"></label>
+                    <div class="flow-tab" onclick="moveFlowSlide(3)">
+                        <img id="svgImg3" src="./images/flow-slide/flowIcon3.svg"></img>
+                        <img id="svgImg3click" src="./images/flow-slide/flowIcon3click.svg"></img>   
+                    </div>
                     <div class="fa fa-arrow-right" aria-hidden="true"></div>
-                    <label id="flowTab4" onclick="moveFlowSlide(4)" class="fas fa-upload"></label>
+                    <div class="flow-tab" onclick="moveFlowSlide(4)">
+                        <img id="svgImg4" src="./images/flow-slide/flowIcon4.svg"></img>
+                        <img id="svgImg4click" src="./images/flow-slide/flowIcon4click.svg"></img>   
+                    </div>
                 </div>
                 <!-- 藍色彈性底線 -->
                 <div class="price-work-flow-bounce-bottom-box">
