[公司形象網站] => 報價流程輪播 => 手機板, 刻出垂直靜態 (動畫暫緩)

--- a/01-Excellence-Web/index.html
+++ b/01-Excellence-Web/index.html
@@ -91,22 +91,25 @@
         <div class="price-work-flow-slide">
             <div class="flow-tab-list-container">
                 <div class="flow-tab-list">
-                    <div class="flow-tab" onclick="moveFlowSlide(1)">
+                    <div class="flow-tab" onclick="clickFlowSlide(1)">
                         <img id="svgImg1" src="./images/flow-slide/flowIcon1.svg"></img>
                         <img id="svgImg1click" src="./images/flow-slide/flowIcon1click.svg"></img>                        
                     </div>
                     <div class="fa fa-arrow-right" aria-hidden="true"></div>
-                    <div class="flow-tab" onclick="moveFlowSlide(2)">
+                    <div class="fa fa-arrow-down" aria-hidden="true"></div>
+                    <div class="flow-tab" onclick="clickFlowSlide(2)">
                         <img id="svgImg2" src="./images/flow-slide/flowIcon2.svg"></img>
                         <img id="svgImg2click" src="./images/flow-slide/flowIcon2click.svg"></img>   
                     </div>
                     <div class="fa fa-arrow-right" aria-hidden="true"></div>
-                    <div class="flow-tab" onclick="moveFlowSlide(3)">
+                    <div class="fa fa-arrow-down" aria-hidden="true"></div>
+                    <div class="flow-tab" onclick="clickFlowSlide(3)">
                         <img id="svgImg3" src="./images/flow-slide/flowIcon3.svg"></img>
                         <img id="svgImg3click" src="./images/flow-slide/flowIcon3click.svg"></img>   
                     </div>
                     <div class="fa fa-arrow-right" aria-hidden="true"></div>
-                    <div class="flow-tab" onclick="moveFlowSlide(4)">
+                    <div class="fa fa-arrow-down" aria-hidden="true"></div>
+                    <div class="flow-tab" onclick="clickFlowSlide(4)">
                         <img id="svgImg4" src="./images/flow-slide/flowIcon4.svg"></img>
                         <img id="svgImg4click" src="./images/flow-slide/flowIcon4click.svg"></img>   
                     </div>
@@ -152,10 +155,10 @@
                     </li>
 
                     <div class="flow-button-icon-list">
-                        <label id="flowIcon1" onclick="moveFlowSlide(1)"></label>
-                        <label id="flowIcon2" onclick="moveFlowSlide(2)"></label>
-                        <label id="flowIcon3" onclick="moveFlowSlide(3)"></label>
-                        <label id="flowIcon4" onclick="moveFlowSlide(4)"></label>
+                        <label id="flowIcon1" onclick="clickFlowSlide(1)"></label>
+                        <label id="flowIcon2" onclick="clickFlowSlide(2)"></label>
+                        <label id="flowIcon3" onclick="clickFlowSlide(3)"></label>
+                        <label id="flowIcon4" onclick="clickFlowSlide(4)"></label>
                     </div>
             </ul>
         </div>
