doc, review code, [公司形象網站] [all]=> 整理 js 程式 review  => 註解, 命名整理

--- a/01-Excellence-Web/index.html
+++ b/01-Excellence-Web/index.html
@@ -122,7 +122,7 @@
                 
             <ul class="flow-slide-list">
                     <li class="slide" id="slide1">
-                        <h3>01 需求分析</h3>
+                        <h3>01. 需求分析</h3>
                         <p> 
                             1. 會請專業的顧問, 不只了解你的需求, 更是裡解你的痛點。
                             <br>
@@ -130,7 +130,7 @@
                         </p>
                     </li>
                     <li class="slide" id="slide2">
-                        <h3>02 開發回饋</h3>
+                        <h3>02. 開發回饋</h3>
                         <p>
                             1. 簽約後, 技術團隊便會立刻開發, 並在開發的各個階段與您確認, 保持期望一致。
                             <br>
@@ -138,7 +138,7 @@
                         </p>
                     </li>
                     <li class="slide" id="slide3">
-                        <h3>03 驗收優化</h3>
+                        <h3>03. 驗收優化</h3>
                         <p>
                             1. 協助將網站上架, 網域等相關設定建置。
                             <br>
